# nlp-churn-rating

./: .gitignore  Makefile  README.md  best_model.pt  mlflow.db  pyproject.toml
docs/: MODEL_CARD.md
models/: best_model.pt  feature_columns.json  lr_model.pkl  scaler.pkl  threshold.json  xgb_model.pkl
notebooks/: Baselines.ipynb  Data-Readiness.ipynb  EDA.ipynb  Metricas.ipynb  mlflow.db
notebooks/.ipynb_checkpoints/: Baselines-checkpoint.ipynb
notebooks/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
scripts/: batch_predict.py
src/: api.py  config.py  data.py  evaluation.py  main.py  metrics.py  models.py  pipeline.py  training.py
tests/: test_api.py  test_preprocessing.py  test_schema.py  test_smoke.py
