[project]
name = "nlp-churn-rating"
version = "0.1.0"
description = "Telco churn prediction — MLP (PyTorch) vs. Scikit-Learn baselines, tracked with MLflow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "mlflow",
    "torch",
    "xgboost>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
