[project]
name = "nlp-churn-rating"
version = "0.1.0"
description = "Telco churn prediction — MLP (PyTorch) vs. Scikit-Learn baselines, tracked with MLflow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "mlflow",
    "torch",
    "xgboost>=3.2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov",
    "pandera>=0.20",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
